[package]
name = "snow-data"
version = "0.1.0"
authors = ["Isaac Park <isaac.a.park@gmail.com>"]
edition = "2018"

[[bin]]
name = "download-data"

[lib]
name = "snodas"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftp = "3.0.1"
chrono = "0.4"
tar = "0.4.30"
flate2 = "1.0.19"
ndarray-npy = "0.6.0"
ndarray = "0.13.1"
proj = "0.20.5"
geo-types = "0.6.1"
minifb = "0.19.1"
image = "0.23.11"
